# stethoscope

./: .gitignore  .pairs  .pipeline.yml  .travis.yml  Dockerfile  Endpoints.json.postman_collection  Gemfile  Procfile  README.md  Rakefile  monocle.cabal  stethoscope.cabal
app/: Main.hs
frontend/: CpuDisplay.elm  Main.elm  elm-package.json
public/: index.html
spec/: request_helpers.rb  spec_helper.rb
spec/features/: filters_spec.rb  index_spec.rb
src/: Server.hs  Usecases.hs
src/Parser/: EventParser.hs  MetricParser.hs
src/Repositories/: LocalRepository.hs
src/Types/: Event.hs  Metric.hs
src/Web/: Server.hs
src/Web/Parser/: EventParser.hs
test/: Spec.hs
test/Parser/: EventParserSpec.hs  MetricParserSpec.hs
test/Web/: ServerSpec.hs
test/Web/Parser/: EventParserSpec.hs
