name:                monocle
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/monocle#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Server, Parser.MetricParser

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
                     , http-types
                     , bytestring
  default-language:    Haskell2010

executable monocle-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monocle
  default-language:    Haskell2010

test-suite monocle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , monocle
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , bytestring
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/monocle
